kubernetes/heimdall/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: heimdall
  namespace: heimdall
spec:
  selector:
    matchLabels:
      app: heimdall
  serviceName: heimdall
  replicas: 1
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        image: docker.io/linuxserver/heimdall
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: config
          mountPath: /config
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 1Gi
