kubernetes/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-svc
  namespace: heimdall
  labels:
    app: heimdall
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: heimdall
