kubernetes/heimdall/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall-ingress
  namespace: heimdall
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.kube.crowlight.com`)
      kind: Rule
      services:
        - name: heimdall-svc
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: kube-crowlight-com-tls
